# Hpair

./: .gitignore  copyEvent.sh
BTag/: BTagEff.cpp  CMakeLists.txt
partonAnalysis/: CMakeLists.txt  a.out  analysis.cpp  draw.C  graph.C  hist.root  lheReader.cpp  lheReader_back.cpp  lhecopier.sh  mdTagger.cpp  partonAnalysis.cpp
partonAnalysis/hist/: hist.root
showerAnalysis/: CMakeLists.txt  a.out  eventAnalysis.cpp  rubbishCode.cpp  tagger.cpp  test.cpp  test.root
showerAnalysis/Cut/: bestcut.txt  bestcut00.txt  bestcut01.txt  bestcut02.txt  bestcut10.txt  bestcut20.txt  cut1.txt  cut10.txt  cut11.txt  cut12.txt  cut13.txt  cut14.txt  cut15.txt  cut16.txt  cut17.txt  cut18.txt  cut19.txt  cut2.txt  cut20.txt  cut21.txt  cut22.txt  cut23.txt  cut24.txt  cut25.txt  cut26.txt  cut27.txt  cut28.txt  cut29.txt  cut3.txt  cut30.txt  cut31.txt  cut32.txt  cut33.txt  cut34.txt  cut35.txt  cut36.txt  cut37.txt  cut38.txt  cut39.txt  cut4.txt  (+14 more)
showerAnalysis/Tagger/: BAChannel.cpp  BAChannel.h  BTChannel.cpp  BTChannel.h  BasicObject.cpp  BasicObject.h  BoostedHiggs.cpp  BoostedHiggs.h  CMakeLists.txt
statistics/: CMakeLists.txt  statistics.cpp
statistics/graph/: AA_100_120_400.root  AA_100_120_400_Scaled.root  AA_100_120_All.root  AA_100_135_400.root  AA_100_150_400.root  AA_100_150_400_Scaled.root  AA_100_400.root  AA_100_400_scaled.root  AA_100_all.root  AA_100_all_scaled.root  significance.root  significanceAA.root
statistics/include/: CMakeLists.txt  StatisticsClass.cpp  StatisticsClass.h
topReco/: CMakeLists.txt  fit.cpp
